# kitchen-snake

./: .containerignore  Containerfile  Justfile  README.md  pyproject.toml
kmg/kitchen/: attrs.py  datetime.py  fs.py  http.py  https.py  ip.py  python.py  requests.py
kmg/kitchen/aio/: __init__.py  cancellation.md  cancellation_from_pombo.py  signals.py
kmg/recipes/aio/: __init__.py  cancellation.py  signals.py
tests/: test_asyncio.py
