[project]
name = "kitchen-snake"
version = "0.0.3"
description = 'Helpful "kitchen sink" utilities for python.'


[project.optional-dependencies]
all = ["attrs", "requests"]
attrs = ["attrs"]
requests = ["requests"]
dev = [
    "ipython", "pytest", "black", "isort", "pylama", "pytest-asyncio"
]

[tool.isort]
profile = "black"

[tools.pyright]

# [tools.pytest.ini_options.pytest]
# asyncio_mode = "auto"