[project]
name = "kitchen-snake"
version = "0.0.6"
description = 'Helpful "kitchen sink" utilities for python.'


[project.optional-dependencies]
all = ["attrs", "requests", "click"]
cli = ["click"]
attrs = ["attrs"] # TODO: the attrs code right now doesn't actually use attrs
requests = ["requests"]
dev = [
    "ipython", "pytest", "black", "isort", "pylama", "pytest-asyncio"
]

[tool.setuptools]
packages = ["kmg"]

[tool.isort]
profile = "black"

[tools.pyright]

# [tools.pytest.ini_options.pytest]
# asyncio_mode = "auto"