[project]
name = "kitchen-snake"
version = "0.0.7"
description = 'Helpful "kitchen sink" utilities for python.'


[project.optional-dependencies]
all = ["requests", "click"]
cli = ["click"]
requests = ["requests"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools]
packages = ["kmg"]

[tool.isort]
profile = "black"

[tool.pyright]

# [tools.pytest.ini_options.pytest]
# asyncio_mode = "auto"